# Conductor

./: .gitignore  .hermes.md  IDEA.md  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  a1b2c3d4e5f6_create_projects_and_project_members_tables.py  a2b2c3d4e5f6_create_git_configs_and_environments.py  a3b2c3d4e5f6_create_airflow_instances_table.py  a4b2c3d4e5f6_create_merge_requests_table.py  b0c1d2e3f4a5_merge_existing_heads.py  b1c2d3e4f5a6_add_project_lifecycle.py  e243e37394b1_create_roles_and_permissions_tables.py
backend/app/: cache.py  config.py  database.py  main.py
backend/app/auth/: deps.py  jwt.py  password.py  permissions.py
backend/app/models/: __init__.py  airflow_instance.py  audit_event.py  base.py  environment.py  git_config.py  merge_request.py  project.py  project_deployment.py  project_lifecycle_job.py  project_member.py  project_runtime_resource.py  reauth_grant.py  role.py  user.py
backend/app/routers/: admin.py  airflow_proxy.py  (+8 more)
backend/tests/: conftest.py  test_admin_projects.py  test_airflow_stats.py  test_db_isolation.py  test_git_commits.py  test_git_token_auth.py  test_health.py  test_lifecycle_models.py  test_lifecycle_queue.py  test_lifecycle_worker.py  test_migrations.py  test_project_access.py  test_project_creation.py  test_project_database.py  test_project_deletion_api.py  test_project_lifecycle.py  test_projects_role.py  test_reauth.py  test_secret_redaction.py  test_workspace_info.py
(+70 files in other folders)
