[project]
name = "conductor-backend"
version = "0.1.0"
description = "Conductor — open-source data transformation platform"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "redis>=5.2",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43",
    "bcrypt>=4.1",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
minversion = "8"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: tests requiring real external services",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
